--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
+/* css for index html*/
 .my-navbar {
   justify-content: left;
+}
+
+.navbar-tablets {
+  color:gray; 
 }
 
 .landing {
@@ -25,4 +30,10 @@
   padding: 50px;
   background-color: bisque;
   min-height: fit-content;
+}
+
+/* css for tablets html */
+.pen-tablets {
+  background-color: tan;
+  padding: 50px; 
 }
