--- a/style.css
+++ b/style.css
@@ -31,10 +31,11 @@ a {
   background-color: blanchedalmond;
 }
 
-.tablet-types {
-  padding: 50px;
-  background-color: bisque;
-  min-height: fit-content;
+.tablet-blurb {
+  justify-content: left;
+  margin-top: 20px;
+  max-width: 500px;
+  margin-left: 30px;
 }
 
 /* css for tablets html */
@@ -48,7 +49,28 @@ a {
 }
 
 .tablet-card {
-  width: 200px;
+  width: calc((100% - 2 * var(--gutter)) / 3);
   padding: 30px;
-  gap: 20px; 
+  gap: 20px;
+}
+
+.masonry {
+  justify-content: center;
+  max-width: 1200px;
+  --gutter: 16px;
+}
+
+@media (max-width: 900px) {
+  .grid-sizer,
+  .tablet-card {
+    width: calc((100% - var(--gutter)) / 2);
+  }
+}
+
+/* Mobile: 1 column */
+@media (max-width: 600px) {
+  .grid-sizer,
+  .tablet-card {
+    width: 100%;
+  }
 }
