--- a/style.css
+++ b/style.css
@@ -53,12 +53,9 @@ a {
   width: calc((100% - 2 * var(--gutter)) / 3);
   padding: 30px;
   gap: 20px;
-  opacity: 0;
-  animation: fadeIn linear forwards;
-  animation-timeline: view(
-    block
-  ); /* Animates based on element's visibility in the viewport */
-  animation-range: entry 0% cover 50%; /* Adjust these values to control when the animation starts and ends */
+  overflow: hidden;
+  transition: all 0.4s ease;
+  cursor: pointer;
 }
 
 .masonry {
@@ -68,15 +65,12 @@ a {
 }
 
 @media (max-width: 900px) {
-  .grid-sizer,
   .tablet-card {
     width: calc((100% - var(--gutter)) / 2);
   }
 }
 
-/* Mobile: 1 column */
 @media (max-width: 600px) {
-  .grid-sizer,
   .tablet-card {
     width: 100%;
   }
@@ -93,15 +87,37 @@ a {
   padding: 3rem;
 }
 
-.input-group {
+.input-group-text {
   justify-content: space-around;
 }
 
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+.input-group {
+  background: none;
+  outline: none;
+}
+
+input[name="filter"] {
+  display: none;
+}
+
+.results {
+  padding: 5px;
+  cursor: pointer;
+  -webkit-appearance: button;
+  -moz-appearance: button;
+  -o-appearance: button;
+  -ms-appearance: button;
+  appearance: button;
+}
+
+.input-group-text label:hover {
+  background: #ddd;
+}
+
+.input-group-text label {
+  padding: 20px;
+}
+
+.input-group-text label:active {
+  background: #ddd;
 }
