--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ a {
   text-decoration: none;
   position: relative;
   color: #7a6263;
+  font-weight: 600;
 }
 
 .my-navbar a::after {
@@ -66,13 +67,13 @@ body.tablet-page {
   min-height: fit-content;
   padding: 50px;
   background-color: #c6dea6;
+  justify-content: center;
 }
 
 .tablet-blurb {
-  justify-content: left;
+  justify-content: center;
   margin-top: 20px;
   max-width: 500px;
-  margin-left: 30px;
 }
 
 /* css for tablets html */
@@ -92,6 +93,7 @@ body.tablet-page {
   row-gap: 20px;
   overflow: hidden;
   cursor: pointer;
+  margin-bottom: 20px;
 }
 
 .masonry {
